# Secure_messanger_with_RSA_EDS

./: docker-compose.yml  pyproject.toml
base_client/: Dockerfile
base_client/app/: db.py  main.py  models.py  schemas.py  security.py  services.py  telegram_bot.py
base_client/app/api/: router_api.py  router_ws.py
base_client_ui/: main.py
client/: Dockerfile
client/app/: main.py  schemas.py
client/app/api/: router_api.py
client_ui/: main.py
security/: security.py
